# Quater-2

./: Assingment_6.ipynb  Copy_of_python.ipynb  Ollama.ipynb  Project_01_LangChain_and_Google_Gemini_Flash_2_0_Integration.ipynb  Project_03_LangChain_Function_Tool_Calling.ipynb  Project_2_LangChain_RAG_Project.ipynb  Untitled7.ipynb  aisuite.ipynb  first_project.ipynb  image_chat_bot.ipynb  practice_langchain_chatbot.ipynb  practice_tool_calling.ipynb  video_process.ipynb
.devcontainer/: devcontainer.json
15-Dec/: concepts.md
Assingment-1/: Parameters.md
Assingment-7/: .env  pyproject.toml  requirements.txt
Assingment-7/src/assingment_7/: __init__.py  gemini.py
Assingment-8/: .env  requirements.txt  requirments.txt  weather.py
quickstarts/: Function_calling_config.ipynb
site/en/gemini-api/docs/model-tuning/: python.ipynb
